# advent-of-code

2024/: dune-project
2024/day01/: common.ml  dune  part1.ml  part2.ml
